# server.js
@@ -1,8 +1,6 @@
 const bodyParser = require('body-parser');
 const mongodb = require('./db/connect');
 const express = require('express');
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger.json');
 
 const port = process.env.PORT || 3000;
 const app = express();
@@ -12,8 +10,7 @@ app.use(bodyParser.json())
        res.setHeader('Access-Control-Allow-Origin', '*');
        next();
     })
-   .use('/', require('./routes'))
-   .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+   .use('/', require('./routes'));
 
 // connect to the server and start the app
 mongodb.initDb(err => {
